services/sensor-management-ui/openshift/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "3"
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"sensor-management-ui:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"sensor-management-ui\")].image"}]'
  labels:
    app: sensor-management-ui
    app.openshift.io/runtime: nginx
    app.kubernetes.io/component: sensor-management-ui
    app.kubernetes.io/instance: sensor-management-ui
  name: sensor-management-ui
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: sensor-management-ui
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        deployment: sensor-management-ui
    spec:
      containers:
      - image: sensor-management-ui:latest
        imagePullPolicy: IfNotPresent
        name: sensor-management-ui
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
