services/sensor-management-ui/openshift/svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sensor-management-ui
    app.kubernetes.io/component: sensor-management-ui
    app.kubernetes.io/instance: sensor-management-ui
  name: sensor-management-ui
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    deployment: sensor-management-ui
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
