services/sensor-management-ui/openshift/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: sensor-management-ui
    app.kubernetes.io/component: sensor-management-ui
    app.kubernetes.io/instance: sensor-management-ui
  name: sensor-management-ui
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: sensor-management-ui
    weight: 100
  wildcardPolicy: None
